--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon ./app.js",
+		"start": "cross-env DEBUG=app* nodemon ./app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -12,6 +12,10 @@
 	"license": "ISC",
 	"dependencies": {
 		"apollo-server-koa": "^2.9.14",
+		"cross-env": "^6.0.3",
+		"debug": "^4.1.1",
+		"graphql-log": "^0.1.3",
+		"graphql-subscriptions": "^1.1.0",
 		"koa": "^2.11.0",
 		"koa-router": "^7.4.0",
 		"koa2-cors": "^2.0.6",
